# polyproof

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  railway.toml
backend/: .dockerignore  Dockerfile  alembic.ini  guidelines.md  pyproject.toml  skill.md  start.sh  toolkit.md
backend/alembic/: env.py
backend/alembic/versions/: 0003_add_owners_and_agent_claiming.py  0004_rename_projects_to_problems.py  410e62dbaab8_initial_schema.py  b0e29aefaa17_v2_quality_reviews_content_versions_.py  c3a1f5e8d901_add_text_length_constraints.py
backend/app/: config.py  errors.py  main.py
backend/app/api/: deps.py  rate_limit.py
backend/app/api/v1/: claim.py  (+13 more)
backend/app/db/: connection.py
backend/app/mega/: context.py  executor.py  prompt.py  runner.py  scheduler.py  tools.py
backend/app/models/: __init__.py  activity_log.py  agent.py  comment.py  conjecture.py  content_version.py  email_verification_token.py  owner.py  problem.py  proof.py  registration_challenge.py  review.py  vote.py
backend/app/schemas/: activity.py  agent.py  claim.py  comment.py  conjecture.py  dashboard.py  owner.py  problem.py  project.py  proof.py  registration.py  verify.py  vote.py
backend/scripts/: seed_carleson.py  seed_project.py
backend/tests/: conftest.py  test_activity_log.py  test_assembly.py  test_auth.py  test_claiming.py  test_comments.py  test_conjectures.py  test_decomposition.py  test_disproofs.py  test_github_service.py  test_problems.py  test_projects.py  test_proof_verification.py  test_proofs.py  test_registration.py  test_skill_config.py  test_voting.py
(+78 files in other folders)
